Add managed CMS contenet section on home page

--- a/assetsSource/css/blocks/BlockStandard/BlockStandard.0000.pcss
+++ b/assetsSource/css/blocks/BlockStandard/BlockStandard.0000.pcss
@@ -1,5 +1,6 @@
 .BlockStandard {
     overflow: hidden;
+    position: relative;
 }
 
 .BlockStandard__Inner {
@@ -58,3 +59,15 @@
     color: #fff;
 }
 
+
+
+
+
+/**
+ * Featured Image Small Pull Left
+ */
+
+.BlockStandard__FeaturedImage--SmallPullLeft {
+    margin: 0 auto;
+    max-width: 386px;
+}
