--- a/assetsSource/css/blocks/BlockStandard/BlockStandard.0650.pcss
+++ b/assetsSource/css/blocks/BlockStandard/BlockStandard.0650.pcss
@@ -1,7 +1,34 @@
+.BlockStandard__Inner--FeaturedImageSmallPullLeft {
+    left: -193px;
+    margin-top: 46px;
+    margin-bottom: 46px;
+    position: relative;
+    width: calc(100% + 193px);
+}
+
 .BlockStandard__Heading {
     font-size: 36px;
 }
 
 .BlockStandard__CTAGroup {
     text-align: left;
+}
+
+.BlockStandard__ContentPrimary--HasFeaturedImage.BlockStandard__ContentPrimary--FeaturedImageStyle-ImageLeft.BlockStandard__ContentPrimary--FeaturedImageSmallPullLeft,
+.BlockStandard__FeaturedImage--FeaturedImageStyle-ImageLeft.BlockStandard__FeaturedImage--SmallPullLeft {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.BlockStandard__ContentPrimary--HasFeaturedImage.BlockStandard__ContentPrimary--FeaturedImageStyle-ImageLeft.BlockStandard__ContentPrimary--FeaturedImageSmallPullLeft {
+    left: 386px;
+    margin-top: 0;
+    padding-left: 20px;
+    width: calc(100% - 406px);
+    position: relative;
+}
+
+.BlockStandard__FeaturedImage--FeaturedImageStyle-ImageLeft.BlockStandard__FeaturedImage--SmallPullLeft {
+    right: calc(100% - 386px);
+    position: relative;
 }
