--- a/assetsSource/css/blocks/BlockStandard/BlockStandard.0810.pcss
+++ b/assetsSource/css/blocks/BlockStandard/BlockStandard.0810.pcss
@@ -1,3 +1,7 @@
 .BlockStandard__ContentPrimary {
     margin: 28px 14px;
 }
+
+.BlockStandard__ContentPrimary--HasFeaturedImage.BlockStandard__ContentPrimary--FeaturedImageStyle-ImageLeft.BlockStandard__ContentPrimary--FeaturedImageSmallPullLeft {
+    width: calc(100% - 416px);
+}
