--- a/assetsSource/css/blocks/BlockStandard/BlockStandard.1300.pcss
+++ b/assetsSource/css/blocks/BlockStandard/BlockStandard.1300.pcss
@@ -3,6 +3,10 @@
     margin-top: 66px;
 }
 
+.BlockStandard__Inner--FeaturedImageSmallPullLeft {
+    margin-bottom: 66px;
+}
+
 .BlockStandard__ContentPrimary--HasFeaturedImage.BlockStandard__ContentPrimary--FeaturedImageStyle-ImageRight,
 .BlockStandard__ContentPrimary--HasFeaturedImage.BlockStandard__ContentPrimary--FeaturedImageStyle-ImageLeft,
 .BlockStandard__FeaturedImage--FeaturedImageStyle-ImageRight,
