Fix some standard block margin bugs

--- a/assetsSource/css/blocks/BlockStandard/BlockStandard.1300.pcss
+++ b/assetsSource/css/blocks/BlockStandard/BlockStandard.1300.pcss
@@ -1,6 +1,10 @@
-/*.BlockStandard__Inner--HasFeaturedImage.BlockStandard__Inner--FeaturedImageStyle-ImageRight*/
-.BlockStandard__Inner {
+.BlockStandard__Inner--HasFeaturedImage.BlockStandard__Inner--FeaturedImageStyle-ImageRight,
+.BlockStandard__Inner--HasFeaturedImage.BlockStandard__Inner--FeaturedImageStyle-ImageLeft {
     margin-top: 66px;
+}
+
+.BlockStandard__Inner--HasNoFeaturedImage {
+    margin: 66px;
 }
 
 .BlockStandard__Inner--FeaturedImageSmallPullLeft {
@@ -12,6 +16,7 @@
 .BlockStandard__FeaturedImage--FeaturedImageStyle-ImageRight,
 .BlockStandard__FeaturedImage--FeaturedImageStyle-ImageLeft {
     display: inline-block;
+    margin-bottom: 0;
     vertical-align: top;
 }
 
