Add Hosting Page

--- a/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
+++ b/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
@@ -67,3 +67,7 @@
 .SiteHeader__FeaturedImageTag {
     margin-bottom: -4px;
 }
+
+.SiteHeader__FeaturedImage--HasSize-Half .SiteHeader__FeaturedImageTag {
+    max-width: 400px;
+}
