--- a/assetsSource/css/layout/SiteHeader/SiteHeader.1350.pcss
+++ b/assetsSource/css/layout/SiteHeader/SiteHeader.1350.pcss
@@ -32,3 +32,12 @@
 .SiteHeader__CTAGroup {
     margin-bottom: -16px;
 }
+
+.SiteHeader__FeaturedImage--HasSize-Half {
+    text-align: center;
+    width: 684px;
+}
+
+.SiteHeader__FeaturedImage--HasSize-Half .SiteHeader__FeaturedImageTag {
+    max-width: 400px;
+}
