Fix a button color on hover problem on green background blocks

--- a/assetsSource/css/blocks/_ContentBlock/ContentBlock.0000.pcss
+++ b/assetsSource/css/blocks/_ContentBlock/ContentBlock.0000.pcss
@@ -6,6 +6,6 @@
     background-color: var(--green);
 }
 
-.ContentBlock--HasBgColor-Green a:hover {
+.ContentBlock--HasBgColor-Green a:not(.button):hover {
     color: var(--lighterGreen);
 }
