--- a/templates/_contentBlocks/standard.twig
+++ b/templates/_contentBlocks/standard.twig
@@ -50,7 +50,7 @@
                                 {% endif %}
                                 <a
                                     href="{{ cta.link|raw }}"
-                                    class="button {{ ctaClass }} CTAGroup__button"
+                                    class="button {{ ctaClass }} CTAGroup__Button"
                                 >
                                     {{ cta.content|raw|typeset }}
                                 </a>
