--- a/templates/_partials/SiteHeader.twig
+++ b/templates/_partials/SiteHeader.twig
@@ -135,7 +135,7 @@
                                     {% endif %}
                                     <a
                                         href="{{ cta.link|raw }}"
-                                        class="button {{ ctaClass }} CTAGroup__button"
+                                        class="button {{ ctaClass }} CTAGroup__Button"
                                     >
                                         {{ cta.content|raw|typeset }}
                                     </a>
