Update contact block styling

--- a/assetsSource/css/blocks/BlockContact/BlockContact.0000.pcss
+++ b/assetsSource/css/blocks/BlockContact/BlockContact.0000.pcss
@@ -3,3 +3,11 @@
     max-width: 450px;
     padding: 30px 0;
 }
+
+.BlockContact__TextArea {
+    min-height: 150px;
+}
+
+.BlockContact__SubmitWrapper {
+    text-align: right;
+}
