--- a/assetsSource/css/layout/LayoutTwoColumns/LayoutTwoColumns.0000.pcss
+++ b/assetsSource/css/layout/LayoutTwoColumns/LayoutTwoColumns.0000.pcss
@@ -1,3 +1,7 @@
+.LayoutTwoColumn__Notice {
+    margin-bottom: 30px;
+}
+
 .LayoutTwoColumn__Left {
     margin-bottom: 40px;
     padding-bottom: 42px;
