--- a/assetsSource/css/vars/Colors.pcss
+++ b/assetsSource/css/vars/Colors.pcss
@@ -12,6 +12,7 @@
     --green: #008c69;
     --lightGreen: #00a67c;
     --lighterGreen: #00bf8f;
+    --lightOrange: #df640e;
     --orange: #cf640e;
     --darkOrange: #b7580c;
     --darkerOrange: #9f4d0b;
