--- a/templates/_embeds/LayoutTwoColumns.twig
+++ b/templates/_embeds/LayoutTwoColumns.twig
@@ -1,20 +1,19 @@
 {% set standardPad = standardPad|default(true) %}
 {% set noticeTitle = noticeTitle|default('Note') %}
 {% set noticeContent = noticeContent|default(null) %}
+{% set noticeIsError = noticeIsError|default(false) %}
 
 <div class="LayoutTwoColumn">
     <div class="LayoutTwoColumn__NoticeContainer">
         {% if noticeContent %}
             <div class="LayoutTwoColumn__Notice">
                 <div class="LayoutTwoColumn__StandardContentWrapper{% if standardPad %} LayoutTwoColumn__StandardContentWrapper--IsPadded{% endif %}">
-                    <div class="Note">
-                        <div class="Note__Title">
-                            {{ noticeTitle|typeset }}
-                        </div>
-                        <div class="Note__Body">
-                            {{ noticeContent|typeset }}
-                        </div>
-                    </div>
+                    {% embed '_embeds/Note.twig' with {
+                        isError: noticeIsError,
+                    } %}
+                        {% block noteTitle %}{{ noticeTitle|typeset }}{% endblock %}
+                        {% block noteContent %}{{ noticeContent|typeset }}{% endblock %}
+                    {% endembed %}
                 </div>
             </div>
         {% endif %}
