Hide the honeypot fields

--- a/assetsSource/css/blocks/BlockContact/BlockContact.0000.pcss
+++ b/assetsSource/css/blocks/BlockContact/BlockContact.0000.pcss
@@ -31,3 +31,19 @@
     margin-bottom: 20px;
     margin-top: -16px;
 }
+
+
+/**
+ * Honeypot hiding
+ */
+
+.BlockContact__Form {
+    overflow: hidden;
+    position: relative;
+}
+
+.BlockContact__InputLabel--Site,
+.BlockContact__InputLabel--MailingAddress {
+    position: absolute;
+    top: -500px;
+}
