--- a/templates/_contentBlocks/contact.twig
+++ b/templates/_contentBlocks/contact.twig
@@ -36,11 +36,11 @@
                         A second input will also act as a honey pot, but we're not touching that input with a pre-filled value or required.
                         No prefilled values and js, in case a spam bot is sneaky
                     #}
-                    <label for="site" class="label BlockContact__InputLabel">
+                    <label for="site" class="label BlockContact__InputLabel BlockContact__InputLabel--Site">
                         Site
                         <input type="text" name="site" class="input BlockContact__Input" id="site" value="buzzingpixel.com" required>
                     </label>
-                    <label for="mailing_address" class="label BlockContact__InputLabel">
+                    <label for="mailing_address" class="label BlockContact__InputLabel BlockContact__InputLabel--MailingAddress">
                         Mailing Address
                         <input type="text" name="mailingAddress" class="input BlockContact__Input" id="mailing_address">
                     </label>
