Fix an issue with hiding honeypot inputs

--- a/assetsSource/css/blocks/BlockContact/BlockContact.0000.pcss
+++ b/assetsSource/css/blocks/BlockContact/BlockContact.0000.pcss
@@ -37,13 +37,8 @@
  * Honeypot hiding
  */
 
-.BlockContact__Form {
-    overflow: hidden;
-    position: relative;
-}
-
 .BlockContact__InputLabel--Site,
 .BlockContact__InputLabel--MailingAddress {
-    position: absolute;
+    position: fixed;
     top: -500px;
 }
