--- a/templates/_embeds/Note.twig
+++ b/templates/_embeds/Note.twig
@@ -2,11 +2,11 @@
 {% set noteContent = block('noteContent') ?? '' %}
 {% set isError = isError|default(false) %}
 
-<div class="Note{% if isError %} Note__IsError{% endif %}">
-    <div class="Note__Title{% if isError %} Note__Title--IsError{% endif %}">
+<div class="Note{% if isError %} Note__IsError{% endif %} JSNote">
+    <div class="Note__Title{% if isError %} Note__Title--IsError{% endif %} JSNote__Title">
         {{ noteTitle|typeset }}
     </div>
-    <div class="Note__Body{% if isError %} Note__Body--IsError{% endif %}">
+    <div class="Note__Body{% if isError %} Note__Body--IsError{% endif %} JSNote__Body">
         {{ noteContent|typeset }}
     </div>
 </div>
